@@ -3596,6 +3596,26 @@ static int rpmdsNAcmp(rpmds A, rpmds B)
     return rc;
 }
 
+/*@unchecked@*/ /*@null@*/
+static const char * evr_tuple_order = NULL;
+
+/**
+ * Return precedence permutation string.
+ * @return		precedence permutation
+ */
+/*@observer@*/
+static const char * rpmdsEVRorder(void)
+	/*@*/
+{
+    if (evr_tuple_order == NULL) {
+	evr_tuple_order = rpmExpand("%{?evr_tuple_order}", NULL);
+	if (evr_tuple_order == NULL || evr_tuple_order[0] == '\0')
+	    evr_tuple_order = xstrdup("EVR");
+    }
+assert(evr_tuple_order != NULL && evr_tuple_order[0] != '\0');
+    return evr_tuple_order;
+}
+
 int rpmdsCompare(const rpmds A, const rpmds B)
 {
     const char *aDepend = (A->DNEVR != NULL ? xstrdup(A->DNEVR+2) : "");
@@ -3606,6 +3626,7 @@ int rpmdsCompare(const rpmds A, const rpmds B)
     evrFlags bFlags = B->ns.Flags;
     int (*EVRcmp) (const char *a, const char *b);
     int result = 1;
+    const char * s;
     int sense;
     int xx;
 
@@ -3638,30 +3659,40 @@ assert((rpmdsFlags(B) & RPMSENSE_SENSEMASK) == B->ns.Flags);
     EVRcmp = (A->EVRcmp && B->EVRcmp && A->EVRcmp == B->EVRcmp)
 	? A->EVRcmp : rpmvercmp;
 
-    /* Compare {A,B} [epoch:]version[-release] */
+    /* Compare {A,B} [epoch:]version[-release][:distepoch] */
     sense = 0;
-    if (a->F[RPMEVR_E] && *a->F[RPMEVR_E] && b->F[RPMEVR_E] && *b->F[RPMEVR_E])
-/*@i@*/	sense = EVRcmp(a->F[RPMEVR_E], b->F[RPMEVR_E]);
-    else if (a->F[RPMEVR_E] && *a->F[RPMEVR_E] && atol(a->F[RPMEVR_E]) > 0) {
-	if (!B->nopromote) {
-	    int lvl = (_rpmds_unspecified_epoch_noise  ? RPMLOG_WARNING : RPMLOG_DEBUG);
-	    rpmlog(lvl, _("The \"B\" dependency needs an epoch (assuming same epoch as \"A\")\n\tA = \"%s\"\tB = \"%s\"\n"),
-		aDepend, bDepend);
-	    sense = 0;
-	} else
-	    sense = 1;
-    } else if (b->F[RPMEVR_E] && *b->F[RPMEVR_E] && atol(b->F[RPMEVR_E]) > 0)
-	sense = -1;
-
-    if (sense == 0) {
-/*@i@*/	sense = EVRcmp(a->F[RPMEVR_V], b->F[RPMEVR_V]);
-	if (sense == 0 && a->F[RPMEVR_R] && *a->F[RPMEVR_R] && b->F[RPMEVR_R] && *b->F[RPMEVR_R])
-/*@i@*/	    sense = EVRcmp(a->F[RPMEVR_R], b->F[RPMEVR_R]);
-#if defined(NOTYET) || defined(RPM_VENDOR_MANDRIVA)
-	if (sense == 0 && a->F[RPMEVR_D] && *a->F[RPMEVR_D] && b->F[RPMEVR_D] && *b->F[RPMEVR_D])
-/*@i@*/	    sense = EVRcmp(a->F[RPMEVR_D], b->F[RPMEVR_D]);
-#endif
+    for (s = rpmdsEVRorder(); *s; s++) {
+	int ix;
+        switch ((int)*s) {
+        default:        continue;       /*@notreached@*/ break;
+        case 'E':
+	    ix = RPMEVR_E;
+	    if (a->F[ix] && *a->F[ix] && b->F[ix] && *b->F[ix])
+		/*@switchbreak@*/ break;
+	    /* XXX Special handling for missing Epoch: tags hysteria */
+	    if (a->F[ix] && *a->F[ix] && atol(a->F[ix]) > 0) {
+		if (!B->nopromote) {
+		    int lvl = (_rpmds_unspecified_epoch_noise
+			? RPMLOG_WARNING : RPMLOG_DEBUG);
+		    rpmlog(lvl, _("The \"B\" dependency needs an epoch (assuming same epoch as \"A\")\n\tA = \"%s\"\tB = \"%s\"\n"),
+			aDepend, bDepend);
+		    sense = 0;
+		} else
+		    sense = 1;
+	    } else
+	    if (b->F[ix] && *b->F[ix] && atol(b->F[ix]) > 0)
+		sense = -1;
+	    /*@switchbreak@*/ break;
+        case 'V':	ix = RPMEVR_V;	/*@switchbreak@*/break;
+        case 'R':	ix = RPMEVR_R;	/*@switchbreak@*/break;
+        case 'D':	ix = RPMEVR_D;	/*@switchbreak@*/break;
+        }
+	if (a->F[ix] && *a->F[ix] && b->F[ix] && *b->F[ix])
+/*@i@*/	    sense = EVRcmp(a->F[ix], b->F[ix]);
+	if (sense)
+	    break;
     }
+
     a->str = _free(a->str);
     b->str = _free(b->str);
 
